# spira-mcp

./: .gitignore  README.md  pyproject.toml
docs/: plan-dynamic-custom-properties.md
src/spira_mcp/: __init__.py  __main__.py  client.py  formatters.py  server.py
