[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spira-mcp"
version = "0.1.0"
description = "MCP server for Inflectra Spira (SpiraPlan/SpiraTest) with proper task filtering and pagination"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Edetek" }
]
keywords = ["mcp", "spira", "spiraPlan", "inflectra", "test-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.28.0",
]

[project.scripts]
spira-mcp = "spira_mcp.server:main"
